--- a/config/argocd-ingress.yaml
+++ b/config/argocd-ingress.yaml
@@ -4,7 +4,8 @@ metadata:
   name: argocd-server-ingress
   namespace: argocd
   annotations:
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
 #    cert-manager.io/issuer: letsencrypt-nginx
 spec:
   ingressClassName: nginx
@@ -23,4 +24,4 @@ spec:
               service:
                 name: argocd-server
                 port:
-                  number: 443
+                  number: 80
