--- a/charts/smartrent/templates/mysql.yaml
+++ b/charts/smartrent/templates/mysql.yaml
@@ -46,14 +46,9 @@ spec:
           readinessProbe:
             exec:
               command:
-                - mysql
-                - -h
-                - localhost
-                - -u
-                - root
-                - -p${MYSQL_ROOT_PASSWORD}
-                - -e
-                - SELECT 1
+                - sh
+                - -c
+                - mysql -h localhost -uroot -p$MYSQL_ROOT_PASSWORD -e "SELECT 1"
             initialDelaySeconds: 10
             periodSeconds: 5
             timeoutSeconds: 3
