--- a/charts/smartrent/environments/dev/values.yaml
+++ b/charts/smartrent/environments/dev/values.yaml
@@ -36,11 +36,11 @@ BEServer:
     CACHE_TYPE: "redis"
   resources:
     requests:
+      memory: "256Mi"
+      cpu: "100m"
+    limits:
       memory: "512Mi"
       cpu: "250m"
-    limits:
-      memory: "1Gi"
-      cpu: "500m"
 
 AIServer:
   image:
