--- a/charts/smartrent/templates/mysql.yaml
+++ b/charts/smartrent/templates/mysql.yaml
@@ -54,11 +54,11 @@ spec:
             timeoutSeconds: 3
           resources:
             requests:
+              memory: "256Mi"
+              cpu: "100m"
+            limits:
               memory: "512Mi"
               cpu: "250m"
-            limits:
-              memory: "1Gi"
-              cpu: "500m"
   volumeClaimTemplates:
     - metadata:
         name: mysql-data
