--- a/charts/smartrent/environments/dev/values.yaml
+++ b/charts/smartrent/environments/dev/values.yaml
@@ -34,6 +34,11 @@ BEServer:
     # Client URL
     CLIENT_URL: "https://smartrent-fe.vercel.app"
     CACHE_TYPE: "redis"
+    additional:
+      SPRING_WEB_CORS_ALLOWED_ORIGINS: "*"
+      SPRING_WEB_CORS_ALLOWED_METHODS: "*"
+      SPRING_WEB_CORS_ALLOWED_HEADERS: "*"
+      SPRING_WEB_CORS_ALLOW_CREDENTIALS: "false"
   resources:
     requests:
       memory: "384Mi"
