--- a/charts/smartrent/values.yaml
+++ b/charts/smartrent/values.yaml
@@ -56,6 +56,8 @@ AIServer:
   env:
     VERSION: "1.0.0"
     DEBUG: "false"
+    SMARTRENT_BACKEND_URL: http://backend-server:8080
+
 
 ScraperServer:
   name: scraper-server
