--- a/config/argocd-ingress.yaml
+++ b/config/argocd-ingress.yaml
@@ -4,24 +4,23 @@ metadata:
   name: argocd-server-ingress
   namespace: argocd
   annotations:
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec:
   ingressClassName: nginx
   tls:
-  - hosts:
-    - argocd.smartrent.vuhuydiet.xyz
-    secretName: argocd-tls
-
+    - hosts:
+        - argocd.smartrent.vuhuydiet.xyz
+      secretName: argocd-tls
   rules:
-  - host: argocd.smartrent.vuhuydiet.xyz
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: argocd-server
-            port:
-              number: 80
+    - host: argocd.smartrent.vuhuydiet.xyz
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: argocd-server
+                port:
+                  number: 80
