--- a/charts/smartrent/templates/ingress.yaml
+++ b/charts/smartrent/templates/ingress.yaml
@@ -12,6 +12,10 @@ spec:
   tls:
     - hosts:
         - {{ .Values.host }}
+        - scraper.{{ .Values.host }}
+{{- if eq .Values.env "dev" }}
+        - ai.{{ .Values.host }}
+{{- end }}
       secretName: smartrent-tls-{{ .Values.env }}
   rules:
     - host: {{ .Values.host }}
